--- a/backend/package.json
+++ b/backend/package.json
@@ -8,13 +8,13 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^9.0.0",
     "openai": "^4.20.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
 }
-
