Update dependencies and package files

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "web:clear": "expo start --web --clear --port 8082",
-    "build:web": "expo export:web",
+    "build:web": "expo export",
     "build:web:clear": "expo export:web --clear",
     "lint": "expo lint"
   },
